--- a/src/main/resources/com/example/demo/ManageCustomer.fxml
+++ b/src/main/resources/com/example/demo/ManageCustomer.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -12,23 +11,17 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.CustomerController">
    <children>
       <TextFlow layoutY="1.0" />
-      <TableView fx:id="TableCustomer" layoutX="6.0" layoutY="89.0" prefHeight="310.0" prefWidth="518.0">
+      <TableView fx:id="TableCustomer" layoutX="5.0" layoutY="89.0" prefHeight="310.0" prefWidth="594.0">
         <columns>
-          <TableColumn fx:id="IDCustomer" prefWidth="54.0" text="Mã KH" />
-            <TableColumn fx:id="NameCustomer" prefWidth="112.0" text="Tên Khách Hàng" />
-            <TableColumn fx:id="Phone" prefWidth="90.0" text="SĐT" />
+          <TableColumn fx:id="IDCustomer" prefWidth="47.0" text="Mã KH" />
+            <TableColumn fx:id="NameCustomer" prefWidth="125.0" text="Tên Khách Hàng" />
+            <TableColumn fx:id="SexCustomer" prefWidth="58.0" text="Giới tính" />
             <TableColumn fx:id="Address" prefWidth="135.0" text="Địa Chỉ" />
-            <TableColumn fx:id="Notes" prefWidth="126.0" text="Ghi chú" />
+            <TableColumn fx:id="DateOfBirth" prefWidth="76.0" text="Ngày sinh" />
+            <TableColumn fx:id="Phone" prefWidth="76.0" text="SĐT" />
+            <TableColumn fx:id="CreationDate" prefWidth="76.0" text="Ngày tạo" />
         </columns>
       </TableView>
-      <Button layoutX="525.0" layoutY="135.0" mnemonicParsing="false" text="Chi Tiết" />
-      <Button layoutX="525.0" layoutY="165.0" mnemonicParsing="false" text="Chi Tiết" />
-      <Button layoutX="525.0" layoutY="285.0" mnemonicParsing="false" text="Chi Tiết" />
-      <Button layoutX="525.0" layoutY="255.0" mnemonicParsing="false" text="Chi Tiết" />
-      <Button layoutX="525.0" layoutY="225.0" mnemonicParsing="false" text="Chi Tiết" />
-      <Button layoutX="525.0" layoutY="195.0" mnemonicParsing="false" text="Chi Tiết" />
-      <Button layoutX="525.0" layoutY="345.0" mnemonicParsing="false" text="Chi Tiết" />
-      <Button layoutX="525.0" layoutY="315.0" mnemonicParsing="false" text="Chi Tiết" />
       <Label layoutX="208.0" layoutY="39.0" text="Danh Sách Khách Hàng" />
       <MenuButton mnemonicParsing="false" text="Tài Khoản">
         <items>
