--- a/src/main/resources/com/example/demo/Login.fxml
+++ b/src/main/resources/com/example/demo/Login.fxml
@@ -1,46 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginController">
+<AnchorPane accessibleRole="BUTTON" prefHeight="0.0" prefWidth="875.0" style="-fx-background-color: #20120f;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginController">
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
+   <cursor>
+      <Cursor fx:constant="DEFAULT" />
+   </cursor>
    <children>
-      <TextField fx:id="UserName" layoutX="227.0" layoutY="125.0" prefHeight="26.0" prefWidth="174.0" />
-      <PasswordField fx:id="PassWord" layoutX="228.0" layoutY="199.0" prefHeight="26.0" prefWidth="173.0" />
-      <Label layoutX="69.0" layoutY="125.0" text="Tài Khoản">
+      <ImageView fitHeight="491.0" fitWidth="877.0" layoutX="-1.0" layoutY="2.0" opacity="0.37" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/computer-science-la-gi-muc-luong-co-cao-khong.jpg" />
+         </image>
+      </ImageView>
+      <Pane layoutX="494.0" layoutY="82.0" opacity="0.77" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
+         <children>
+            <Label layoutX="106.0" layoutY="14.0" text="Sign In" textFill="WHITE">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <PasswordField fx:id="PassWord" layoutX="6.0" layoutY="137.0" prefHeight="26.0" prefWidth="314.0" promptText="PassWord" />
+            <TextField fx:id="UserName" layoutX="6.0" layoutY="92.0" prefHeight="26.0" prefWidth="314.0" promptText="UserName" />
+            <Button fx:id="Login" layoutX="47.0" layoutY="200.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Login" textFill="WHITE" />
+            <Hyperlink layoutX="99.0" layoutY="279.0" text="Forgot Password" textFill="WHITE" underline="true">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Hyperlink>
+            <Button fx:id="SignUp" layoutX="47.0" layoutY="253.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
+            <CheckBox layoutX="175.0" layoutY="176.0" mnemonicParsing="false" text="Remember PassWord" textFill="WHITE" />
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Pane>
+      <Label layoutX="68.0" layoutY="162.0" prefHeight="30.0" prefWidth="292.0" text="WELCOME TO GOOD FRIENDS" textFill="#eae2e2">
          <font>
-            <Font name="Times New Roman" size="24.0" />
+            <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="183.0" layoutY="42.0" text="Đăng Nhập">
-         <font>
-            <Font name="Times New Roman Bold" size="48.0" />
-         </font>
-      </Label>
-      <CheckBox fx:id="Remember" layoutX="225.0" layoutY="253.0" mnemonicParsing="false" text="Nhớ Mật Khẩu">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </CheckBox>
-      <Button fx:id="Login" layoutX="72.0" layoutY="299.0" mnemonicParsing="false" onAction="#ActionLogin" text="Đăng Nhập">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Label layoutX="72.0" layoutY="199.0" text="Mật Khẩu">
-         <font>
-            <Font name="Times New Roman" size="24.0" />
-         </font>
-      </Label>
-      <Button fx:id="Register" layoutX="324.0" layoutY="299.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="40.0" prefWidth="115.0" text="Đăng Ký">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
