--- a/src/main/resources/com/example/demo/Register.fxml
+++ b/src/main/resources/com/example/demo/Register.fxml
@@ -1,46 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegisterController">
+<AnchorPane accessibleRole="BUTTON" prefHeight="0.0" prefWidth="865.0" style="-fx-background-color: #20120f;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegisterController">
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
+   <cursor>
+      <Cursor fx:constant="DEFAULT" />
+   </cursor>
    <children>
-      <Label layoutX="195.0" layoutY="22.0" prefHeight="55.0" prefWidth="216.0" text="ĐĂNG KÍ">
+      <ImageView fitHeight="515.0" fitWidth="859.0" layoutX="3.0" layoutY="4.0" opacity="0.37" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/computer-science-la-gi-muc-luong-co-cao-khong.jpg" />
+         </image>
+      </ImageView>
+      <Pane layoutX="494.0" layoutY="82.0" opacity="0.77" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
+         <children>
+            <Label layoutX="106.0" layoutY="14.0" text="Sign Up" textFill="WHITE">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <PasswordField fx:id="PassRegister" layoutX="5.0" layoutY="129.0" prefHeight="26.0" prefWidth="314.0" promptText="PassWord" />
+            <TextField fx:id="UserRegister" layoutX="5.0" layoutY="84.0" prefHeight="26.0" prefWidth="314.0" promptText="UserName" />
+            <Button fx:id="RegisterMore" layoutX="47.0" layoutY="227.0" mnemonicParsing="false" onAction="#ActionRegisterMore" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
+            <Button fx:id="BackLogin" layoutX="47.0" layoutY="268.0" mnemonicParsing="false" onAction="#ActionBackLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign In" textFill="WHITE" />
+            <PasswordField fx:id="PassRegisterAgain" layoutX="5.0" layoutY="171.0" prefHeight="26.0" prefWidth="314.0" promptText="Confirm PassWord" />
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Pane>
+      <Label layoutX="58.0" layoutY="197.0" prefHeight="30.0" prefWidth="292.0" text="WELCOME TO GOOD FRIENDS" textFill="#eae2e2">
          <font>
-            <Font name="Times New Roman Bold" size="48.0" />
+            <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="50.0" layoutY="110.0" text="Tài Khoản">
-         <font>
-            <Font name="Times New Roman" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="14.0" layoutY="200.0" text="Nhập lại Mật Khẩu">
-         <font>
-            <Font name="Times New Roman" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="53.0" layoutY="158.0" text="Mật Khẩu">
-         <font>
-            <Font name="Times New Roman" size="24.0" />
-         </font>
-      </Label>
-      <TextField fx:id="UserRegister" layoutX="235.0" layoutY="111.0" prefHeight="26.0" prefWidth="202.0" />
-      <PasswordField fx:id="PassRegister" layoutX="235.0" layoutY="159.0" prefHeight="26.0" prefWidth="202.0" />
-      <PasswordField fx:id="PassRegisterAgain" layoutX="235.0" layoutY="201.0" prefHeight="26.0" prefWidth="202.0" />
-      <Button fx:id="RegisterMore" layoutX="79.0" layoutY="276.0" mnemonicParsing="false" onAction="#ActionRegisterMore" text="Đăng kí">
-         <font>
-            <Font name="Times New Roman" size="24.0" />
-         </font>
-      </Button>
-      <Button fx:id="BackLogin" layoutX="305.0" layoutY="276.0" mnemonicParsing="false" onAction="#ActionBackLogin" text="Đăng Nhập ngay">
-         <font>
-            <Font name="Times New Roman" size="24.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
