--- a/src/main/resources/com/example/demo/ChangeCustomer.fxml
+++ b/src/main/resources/com/example/demo/ChangeCustomer.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.ChangeCustomer">
@@ -17,8 +18,13 @@
       <TextField fx:id="Address" layoutX="236.0" layoutY="196.0" prefHeight="25.0" prefWidth="224.0" />
       <TextField fx:id="Phone" layoutX="236.0" layoutY="236.0" prefHeight="25.0" prefWidth="224.0" />
       <TextField fx:id="Date" layoutX="236.0" layoutY="156.0" prefHeight="25.0" prefWidth="224.0" />
-      <Button layoutX="408.0" layoutY="280.0" mnemonicParsing="false" text="Accept" />
-      <RadioButton layoutX="236.0" layoutY="120.0" mnemonicParsing="false" text="Male" />
-      <RadioButton layoutX="348.0" layoutY="120.0" mnemonicParsing="false" text="Female" />
+      <Button fx:id="Accept" layoutX="408.0" layoutY="338.0" mnemonicParsing="false" onAction="#ActionAccept" text="Accept" />
+      <RadioButton fx:id="Male" layoutX="236.0" layoutY="120.0" mnemonicParsing="false" text="Male">
+         <toggleGroup>
+            <ToggleGroup fx:id="SexGroup" />
+         </toggleGroup></RadioButton>
+      <RadioButton fx:id="Female" layoutX="348.0" layoutY="120.0" mnemonicParsing="false" text="Female" toggleGroup="$SexGroup" />
+      <Label layoutX="74.0" layoutY="280.0" text="Creation date" AnchorPane.leftAnchor="74.0" />
+      <TextField fx:id="CreationDate" layoutX="236.0" layoutY="276.0" prefHeight="25.0" prefWidth="224.0" />
    </children>
 </AnchorPane>
