Update MenuItem and ChangeCustomer

--- a/src/main/resources/com/example/demo/ChangeCustomer.fxml
+++ b/src/main/resources/com/example/demo/ChangeCustomer.fxml
@@ -17,14 +17,16 @@
       <TextField fx:id="FullName" layoutX="236.0" layoutY="76.0" prefHeight="25.0" prefWidth="224.0" />
       <TextField fx:id="Address" layoutX="236.0" layoutY="196.0" prefHeight="25.0" prefWidth="224.0" />
       <TextField fx:id="Phone" layoutX="236.0" layoutY="236.0" prefHeight="25.0" prefWidth="224.0" />
-      <TextField fx:id="Date" layoutX="236.0" layoutY="156.0" prefHeight="25.0" prefWidth="224.0" />
-      <Button fx:id="Accept" layoutX="408.0" layoutY="338.0" mnemonicParsing="false" onAction="#ActionAccept" text="Accept" />
-      <RadioButton fx:id="Male" layoutX="236.0" layoutY="120.0" mnemonicParsing="false" text="Male">
+      <TextField fx:id="DateOfBirth" layoutX="236.0" layoutY="156.0" prefHeight="25.0" prefWidth="224.0" />
+      <Button fx:id="Save" layoutX="408.0" layoutY="338.0" mnemonicParsing="false" onAction="#ActionSave" text="Save" />
+      <RadioButton fx:id="Male" layoutX="236.0" layoutY="120.0" mnemonicParsing="false" selected="true" text="Male">
          <toggleGroup>
             <ToggleGroup fx:id="SexGroup" />
          </toggleGroup></RadioButton>
       <RadioButton fx:id="Female" layoutX="348.0" layoutY="120.0" mnemonicParsing="false" text="Female" toggleGroup="$SexGroup" />
       <Label layoutX="74.0" layoutY="280.0" text="Creation date" AnchorPane.leftAnchor="74.0" />
       <TextField fx:id="CreationDate" layoutX="236.0" layoutY="276.0" prefHeight="25.0" prefWidth="224.0" />
+      <Button fx:id="Back" layoutX="236.0" layoutY="338.0" mnemonicParsing="false" onAction="#ActionBack" text="Back" />
+      <Button fx:id="Add" layoutX="321.0" layoutY="338.0" mnemonicParsing="false" onAction="#ActionAdd" text="Add" />
    </children>
 </AnchorPane>
