--- a/src/main/resources/com/example/demo/Login.fxml
+++ b/src/main/resources/com/example/demo/Login.fxml
@@ -3,8 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -37,14 +35,9 @@
             </Label>
             <PasswordField fx:id="PassWord" layoutX="6.0" layoutY="137.0" prefHeight="26.0" prefWidth="314.0" promptText="PassWord" />
             <TextField fx:id="UserName" layoutX="6.0" layoutY="92.0" prefHeight="26.0" prefWidth="314.0" promptText="UserName" />
-            <Button fx:id="Login" layoutX="47.0" layoutY="200.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Login" textFill="WHITE" />
-            <Hyperlink layoutX="99.0" layoutY="279.0" text="Forgot Password" textFill="WHITE" underline="true">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Hyperlink>
-            <Button fx:id="SignUp" layoutX="47.0" layoutY="253.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
-            <CheckBox layoutX="175.0" layoutY="176.0" mnemonicParsing="false" text="Remember PassWord" textFill="WHITE" />
+            <Button fx:id="Login" layoutX="47.0" layoutY="185.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Login" textFill="WHITE" />
+            <Button fx:id="SignUp" layoutX="47.0" layoutY="235.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
+            <Button fx:id="ForgotPassWord" layoutX="47.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionForgotPassWord" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Forgot Password" textFill="WHITE" />
          </children>
          <effect>
             <DropShadow />
