--- a/src/main/resources/com/example/demo/Register.fxml
+++ b/src/main/resources/com/example/demo/Register.fxml
@@ -28,16 +28,17 @@
       </ImageView>
       <Pane layoutX="494.0" layoutY="82.0" opacity="0.77" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
          <children>
-            <Label layoutX="106.0" layoutY="14.0" text="Sign Up" textFill="WHITE">
+            <Label layoutX="106.0" layoutY="9.0" text="Sign Up" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
-            <PasswordField fx:id="PassRegister" layoutX="5.0" layoutY="129.0" prefHeight="26.0" prefWidth="314.0" promptText="PassWord" />
-            <TextField fx:id="UserRegister" layoutX="5.0" layoutY="84.0" prefHeight="26.0" prefWidth="314.0" promptText="UserName" />
+            <PasswordField fx:id="PassRegister" layoutX="5.0" layoutY="105.0" prefHeight="26.0" prefWidth="314.0" promptText="PassWord" />
+            <TextField fx:id="UserRegister" layoutX="5.0" layoutY="65.0" prefHeight="26.0" prefWidth="314.0" promptText="UserName" />
             <Button fx:id="RegisterMore" layoutX="47.0" layoutY="227.0" mnemonicParsing="false" onAction="#ActionRegisterMore" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
             <Button fx:id="BackLogin" layoutX="47.0" layoutY="268.0" mnemonicParsing="false" onAction="#ActionBackLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign In" textFill="WHITE" />
-            <PasswordField fx:id="PassRegisterAgain" layoutX="5.0" layoutY="171.0" prefHeight="26.0" prefWidth="314.0" promptText="Confirm PassWord" />
+            <PasswordField fx:id="PassRegisterAgain" layoutX="5.0" layoutY="145.0" prefHeight="26.0" prefWidth="314.0" promptText="Confirm PassWord" />
+            <TextField fx:id="SecretQuestion" layoutX="5.0" layoutY="185.0" prefHeight="26.0" prefWidth="314.0" promptText="Secret Question" />
          </children>
          <effect>
             <DropShadow />
