--- a/src/main/resources/com/example/demo/ForgotPassword.fxml
+++ b/src/main/resources/com/example/demo/ForgotPassword.fxml
@@ -5,16 +5,20 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.ForgotPassword">
    <children>
-      <Label layoutX="256.0" layoutY="48.0" text="Reset Password" />
+      <Label layoutX="232.0" layoutY="48.0" text="Reset Password" AnchorPane.topAnchor="50.0">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
       <Label layoutX="63.0" layoutY="119.0" text="Username" AnchorPane.leftAnchor="63.0" />
-      <Label layoutX="63.0" layoutY="172.0" text="New Password" AnchorPane.leftAnchor="63.0" />
-      <Label layoutX="63.0" layoutY="234.0" text="Secret Question" AnchorPane.leftAnchor="63.0" />
-      <TextField fx:id="UserName" layoutX="226.0" layoutY="115.0" prefHeight="25.0" prefWidth="233.0" AnchorPane.rightAnchor="144.0" />
-      <TextField fx:id="SecretQuestion" layoutX="223.0" layoutY="230.0" prefHeight="25.0" prefWidth="233.0" AnchorPane.rightAnchor="144.0" />
-      <Button fx:id="Reset" layoutX="357.0" layoutY="287.0" mnemonicParsing="false" onAction="#ActionReset" text="Reset Password" />
-      <PasswordField fx:id="PassWord" layoutX="223.0" layoutY="177.0" prefHeight="25.0" prefWidth="233.0" />
+      <Label layoutX="63.0" layoutY="172.0" text="Password new" AnchorPane.leftAnchor="63.0" />
+      <Label layoutX="63.0" layoutY="234.0" text="Secret question" AnchorPane.leftAnchor="63.0" />
+      <TextField fx:id="UserName" layoutX="223.0" layoutY="115.0" prefHeight="25.0" prefWidth="233.0" promptText="Username" AnchorPane.rightAnchor="144.0" />
+      <PasswordField fx:id="PassWord" layoutX="223.0" layoutY="168.0" prefHeight="25.0" prefWidth="233.0" promptText="Password new" AnchorPane.rightAnchor="144.0" />
+      <TextField fx:id="SecretQuestion" layoutX="223.0" layoutY="230.0" prefHeight="25.0" prefWidth="233.0" promptText="Secret question" AnchorPane.rightAnchor="144.0" />
+      <Button fx:id="Reset" layoutX="357.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionReset" text="Reset password" AnchorPane.rightAnchor="144.0" />
    </children>
 </AnchorPane>
