--- a/src/main/resources/com/example/demo/Login.fxml
+++ b/src/main/resources/com/example/demo/Login.fxml
@@ -23,21 +23,21 @@
    <children>
       <ImageView fitHeight="491.0" fitWidth="877.0" layoutX="-1.0" layoutY="2.0" opacity="0.37" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/computer-science-la-gi-muc-luong-co-cao-khong.jpg" />
+            <Image url="@../image/images1.jpg" />
          </image>
       </ImageView>
       <Pane layoutX="494.0" layoutY="82.0" opacity="0.77" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
          <children>
-            <Label layoutX="106.0" layoutY="14.0" text="Sign In" textFill="WHITE">
+            <Label layoutX="107.0" layoutY="14.0" text="SIGN IN" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
-            <PasswordField fx:id="PassWord" layoutX="6.0" layoutY="137.0" prefHeight="26.0" prefWidth="314.0" promptText="PassWord" />
-            <TextField fx:id="UserName" layoutX="6.0" layoutY="92.0" prefHeight="26.0" prefWidth="314.0" promptText="UserName" />
-            <Button fx:id="Login" layoutX="47.0" layoutY="185.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Login" textFill="WHITE" />
-            <Button fx:id="SignUp" layoutX="47.0" layoutY="235.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
-            <Button fx:id="ForgotPassWord" layoutX="47.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionForgotPassWord" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Forgot Password" textFill="WHITE" />
+            <TextField fx:id="UserName" layoutX="6.0" layoutY="92.0" prefHeight="26.0" prefWidth="314.0" promptText="Username" />
+            <PasswordField fx:id="PassWord" layoutX="6.0" layoutY="137.0" prefHeight="26.0" prefWidth="314.0" promptText="Password" />
+            <Button fx:id="Login" layoutX="47.0" layoutY="185.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
+            <Button fx:id="SignUp" layoutX="47.0" layoutY="235.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Logout" textFill="WHITE" />
+            <Button fx:id="ForgotPassWord" layoutX="47.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionForgotPassWord" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Forgot your password" textFill="WHITE" />
          </children>
          <effect>
             <DropShadow />
