--- a/src/main/resources/com/example/demo/ManageCustomer.fxml
+++ b/src/main/resources/com/example/demo/ManageCustomer.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.CustomerController">
@@ -13,44 +14,44 @@
       <TextFlow layoutY="1.0" />
       <TableView fx:id="TableCustomer" layoutX="5.0" layoutY="89.0" prefHeight="310.0" prefWidth="594.0">
         <columns>
-          <TableColumn fx:id="IDCustomer" prefWidth="47.0" text="Mã KH" />
-            <TableColumn fx:id="NameCustomer" prefWidth="125.0" text="Tên Khách Hàng" />
-            <TableColumn fx:id="SexCustomer" prefWidth="58.0" text="Giới tính" />
-            <TableColumn fx:id="Address" prefWidth="135.0" text="Địa Chỉ" />
-            <TableColumn fx:id="DateOfBirth" prefWidth="76.0" text="Ngày sinh" />
-            <TableColumn fx:id="Phone" prefWidth="76.0" text="SĐT" />
-            <TableColumn fx:id="CreationDate" prefWidth="76.0" text="Ngày tạo" />
+          <TableColumn fx:id="IDCustomer" prefWidth="47.0" text="Code" />
+            <TableColumn fx:id="NameCustomer" prefWidth="125.0" text="Customer name" />
+            <TableColumn fx:id="SexCustomer" prefWidth="58.0" text="Sex" />
+            <TableColumn fx:id="Address" prefWidth="135.0" text="Address" />
+            <TableColumn fx:id="DateOfBirth" prefWidth="76.0" text="Birth date" />
+            <TableColumn fx:id="Phone" prefWidth="76.0" text="Phone" />
+            <TableColumn fx:id="CreationDate" prefWidth="76.0" text="Creation" />
         </columns>
       </TableView>
-      <Label layoutX="208.0" layoutY="39.0" text="Danh Sách Khách Hàng" />
-      <MenuButton mnemonicParsing="false" text="Tài Khoản">
+      <Label layoutX="190.0" layoutY="39.0" text="Manage Customer">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+      <MenuButton fx:id="Account" mnemonicParsing="false" text="Account">
         <items>
-          <MenuItem mnemonicParsing="false" text="Thêm Tài Khoản" />
-          <MenuItem mnemonicParsing="false" text="Đổi Mật Khẩu" />
-            <MenuItem mnemonicParsing="false" text="Chỉnh Sửa Thông Tin" />
-            <MenuItem mnemonicParsing="false" text="Đăng Xuất" />
+            <MenuItem fx:id="EditAccount" mnemonicParsing="false" text="Edit account" />
+            <MenuItem fx:id="LogOut" mnemonicParsing="false" text="Logout" />
+            <MenuItem fx:id="Exit" mnemonicParsing="false" text="Exit" />
         </items>
       </MenuButton>
-      <MenuButton fx:id="Menu" layoutX="96.0" mnemonicParsing="false" text="Khách Hàng">
+      <MenuButton fx:id="Menu" layoutX="96.0" mnemonicParsing="false" text="Customer">
          <items>
-            <MenuItem fx:id="AddCustomer" mnemonicParsing="false" text="Thêm Khách Hàng" />
-            <MenuItem fx:id="EditCustomer" mnemonicParsing="false" text="Chỉnh Sửa Thông Tin" />
-            <MenuItem fx:id="RemoveCustomer" mnemonicParsing="false" text="Xóa khách hàng" />
+            <MenuItem fx:id="SalesLead" mnemonicParsing="false" text="Sales lead" />
+            <MenuItem fx:id="AddCustomer" mnemonicParsing="false" text="Add customer" />
+            <MenuItem fx:id="EditCustomer" mnemonicParsing="false" text="Edit customer" />
+            <MenuItem fx:id="RemoveCustomer" mnemonicParsing="false" text="Remove customer" />
          </items>
       </MenuButton>
-      <MenuButton layoutX="204.0" mnemonicParsing="false" text="Hàng Hóa">
+      <MenuButton layoutX="204.0" mnemonicParsing="false" text="Goods">
          <items>
-            <MenuItem mnemonicParsing="false" text="Danh Sách hàng" />
-            <MenuItem mnemonicParsing="false" text="Thêm Hàng" />
-            <MenuItem mnemonicParsing="false" text="Sửa Hàng Hóa" />
+            <MenuItem mnemonicParsing="false" text="Goods list" />
+            <MenuItem mnemonicParsing="false" text="Edit goods" />
          </items>
       </MenuButton>
-      <MenuButton layoutX="300.0" mnemonicParsing="false" text="Nhân Viên ">
+      <MenuButton layoutX="300.0" mnemonicParsing="false" text="Staff">
          <items>
-            <MenuItem mnemonicParsing="false" text="Danh Sách Nhân Viên " />
-            <MenuItem mnemonicParsing="false" text="Thêm Nhân Viên" />
-            <MenuItem mnemonicParsing="false" text="Chỉnh sửa Cấp Bậc" />
-            <MenuItem mnemonicParsing="false" text="Chấm Công" />
+            <MenuItem mnemonicParsing="false" text="Staff list" />
+            <MenuItem mnemonicParsing="false" text="Timekeeping" />
          </items>
       </MenuButton>
    </children>
