--- a/src/main/resources/com/example/demo/Register.fxml
+++ b/src/main/resources/com/example/demo/Register.fxml
@@ -23,7 +23,7 @@
    <children>
       <ImageView fitHeight="515.0" fitWidth="859.0" layoutX="3.0" layoutY="4.0" opacity="0.37" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/computer-science-la-gi-muc-luong-co-cao-khong.jpg" />
+            <Image url="@../image/images1.jpg" />
          </image>
       </ImageView>
       <Pane layoutX="494.0" layoutY="82.0" opacity="0.77" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
@@ -33,12 +33,12 @@
                   <Font size="32.0" />
                </font>
             </Label>
-            <PasswordField fx:id="PassRegister" layoutX="5.0" layoutY="105.0" prefHeight="26.0" prefWidth="314.0" promptText="PassWord" />
-            <TextField fx:id="UserRegister" layoutX="5.0" layoutY="65.0" prefHeight="26.0" prefWidth="314.0" promptText="UserName" />
-            <Button fx:id="RegisterMore" layoutX="47.0" layoutY="227.0" mnemonicParsing="false" onAction="#ActionRegisterMore" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
-            <Button fx:id="BackLogin" layoutX="47.0" layoutY="268.0" mnemonicParsing="false" onAction="#ActionBackLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign In" textFill="WHITE" />
-            <PasswordField fx:id="PassRegisterAgain" layoutX="5.0" layoutY="145.0" prefHeight="26.0" prefWidth="314.0" promptText="Confirm PassWord" />
-            <TextField fx:id="SecretQuestion" layoutX="5.0" layoutY="185.0" prefHeight="26.0" prefWidth="314.0" promptText="Secret Question" />
+            <TextField fx:id="UserRegister" layoutX="5.0" layoutY="65.0" prefHeight="26.0" prefWidth="314.0" promptText="Username" />
+            <PasswordField fx:id="PassRegister" layoutX="5.0" layoutY="105.0" prefHeight="26.0" prefWidth="314.0" promptText="Password" />
+            <PasswordField fx:id="PassRegisterAgain" layoutX="5.0" layoutY="145.0" prefHeight="26.0" prefWidth="314.0" promptText="Password confirm" />
+            <TextField fx:id="SecretQuestion" layoutX="5.0" layoutY="185.0" prefHeight="26.0" prefWidth="314.0" promptText="Secret question" />
+            <Button fx:id="RegisterMore" layoutX="47.0" layoutY="227.0" mnemonicParsing="false" onAction="#ActionRegisterMore" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign up" textFill="WHITE" />
+            <Button fx:id="BackLogin" layoutX="47.0" layoutY="268.0" mnemonicParsing="false" onAction="#ActionBackLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
          </children>
          <effect>
             <DropShadow />
