--- a/src/main/resources/com/example/demo/Login.fxml
+++ b/src/main/resources/com/example/demo/Login.fxml
@@ -35,7 +35,7 @@
             </Label>
             <TextField fx:id="UserName" layoutX="6.0" layoutY="92.0" prefHeight="26.0" prefWidth="314.0" promptText="Username" />
             <PasswordField fx:id="PassWord" layoutX="6.0" layoutY="137.0" prefHeight="26.0" prefWidth="314.0" promptText="Password" />
-            <Button fx:id="Login" layoutX="47.0" layoutY="185.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
+            <Button fx:id="Login" layoutX="47.0" layoutY="185.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Login" textFill="WHITE" />
             <Button fx:id="SignUp" layoutX="47.0" layoutY="235.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign up" textFill="WHITE" />
             <Button fx:id="ForgotPassWord" layoutX="47.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionForgotPassWord" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Forgot your password" textFill="WHITE" />
          </children>
