--- a/src/main/resources/com/example/demo/ForgotPassword.fxml
+++ b/src/main/resources/com/example/demo/ForgotPassword.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.ForgotPassword">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="232.0" layoutY="48.0" text="Reset Password" AnchorPane.topAnchor="50.0">
          <font>
@@ -19,6 +19,6 @@
       <TextField fx:id="UserName" layoutX="223.0" layoutY="115.0" prefHeight="25.0" prefWidth="233.0" promptText="Username" AnchorPane.rightAnchor="144.0" />
       <PasswordField fx:id="PassWord" layoutX="223.0" layoutY="168.0" prefHeight="25.0" prefWidth="233.0" promptText="Password new" AnchorPane.rightAnchor="144.0" />
       <TextField fx:id="SecretQuestion" layoutX="223.0" layoutY="230.0" prefHeight="25.0" prefWidth="233.0" promptText="Secret question" AnchorPane.rightAnchor="144.0" />
-      <Button fx:id="Reset" layoutX="357.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionReset" text="Reset password" AnchorPane.rightAnchor="144.0" />
+      <Button fx:id="Reset" layoutX="357.0" layoutY="285.0" mnemonicParsing="false" text="Reset password" AnchorPane.rightAnchor="144.0" />
    </children>
 </AnchorPane>
