--- a/src/main/resources/com/example/demo/ForgotPass.fxml
+++ b/src/main/resources/com/example/demo/ForgotPass.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -33,11 +34,38 @@
                         <Font size="32.0" />
                     </font>
                 </Label>
-                <TextField fx:id="UserName" layoutX="5.0" layoutY="65.0" prefHeight="26.0" prefWidth="314.0" promptText="Username" />
-                <PasswordField fx:id="PassWord" layoutX="5.0" layoutY="110.0" prefHeight="26.0" prefWidth="314.0" promptText="Password" />
-                <TextField fx:id="SecretQuestion" layoutX="5.0" layoutY="155.0" prefHeight="26.0" prefWidth="314.0" promptText="Secret question" />
-                <Button fx:id="Reset" layoutX="47.0" layoutY="205.0" mnemonicParsing="false" onAction="#ActionReset" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Reset" textFill="WHITE" />
+                <Button fx:id="Reset" layoutX="46.0" layoutY="218.0" mnemonicParsing="false" onAction="#ActionReset" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Reset" textFill="WHITE" />
                 <Button fx:id="BackLogin" layoutX="47.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
+            <HBox layoutX="36.0" layoutY="80.0" prefHeight="30.0" prefWidth="267.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_test_account_64.png" />
+                     </image>
+                  </ImageView>
+                      <TextField fx:id="UserName" prefHeight="26.0" prefWidth="314.0" promptText="Username" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
+            <HBox layoutX="36.0" layoutY="126.0" prefHeight="30.0" prefWidth="267.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_password_64.png" />
+                     </image>
+                  </ImageView>
+                      <PasswordField fx:id="PassWord" prefHeight="26.0" prefWidth="314.0" promptText="Password" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
+            <HBox layoutX="36.0" layoutY="175.0" prefHeight="30.0" prefWidth="267.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_password_64.png" />
+                     </image>
+                  </ImageView>
+                      <TextField fx:id="SecretQuestion" prefHeight="26.0" prefWidth="314.0" promptText="Secret question" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
             </children>
             <effect>
                 <DropShadow />
