--- a/src/main/resources/com/example/demo/Login.fxml
+++ b/src/main/resources/com/example/demo/Login.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -23,21 +24,38 @@
    <children>
       <ImageView fitHeight="491.0" fitWidth="877.0" layoutX="-1.0" layoutY="2.0" opacity="0.37" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/images1.jpg" />
+            <Image url="@../../../hinh/computer-science-la-gi-muc-luong-co-cao-khong.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="494.0" layoutY="82.0" opacity="0.77" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
+      <Pane layoutX="472.0" layoutY="84.0" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
          <children>
-            <Label layoutX="107.0" layoutY="14.0" text="SIGN IN" textAlignment="CENTER" textFill="WHITE">
+            <Label layoutX="106.0" layoutY="14.0" text="Sign In" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
-            <TextField fx:id="UserName" layoutX="6.0" layoutY="92.0" prefHeight="26.0" prefWidth="314.0" promptText="Username" />
-            <PasswordField fx:id="PassWord" layoutX="6.0" layoutY="137.0" prefHeight="26.0" prefWidth="314.0" promptText="Password" />
             <Button fx:id="Login" layoutX="47.0" layoutY="185.0" mnemonicParsing="false" onAction="#ActionLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Login" textFill="WHITE" />
-            <Button fx:id="SignUp" layoutX="47.0" layoutY="235.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign up" textFill="WHITE" />
-            <Button fx:id="ForgotPassWord" layoutX="47.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionForgotPassWord" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Forgot your password" textFill="WHITE" />
+            <Button fx:id="SignUp" layoutX="47.0" layoutY="235.0" mnemonicParsing="false" onAction="#ActionRegister" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="SignUp" textFill="WHITE" />
+            <Button fx:id="ForgotPassWord" layoutX="47.0" layoutY="285.0" mnemonicParsing="false" onAction="#ActionForgotPassWord" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: transparent;" text="Forgot Password" textFill="WHITE" underline="true" />
+            <HBox layoutX="30.0" layoutY="72.0" prefHeight="30.0" prefWidth="267.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_test_account_64.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="UserName" prefHeight="26.0" prefWidth="248.0" promptText="UserName" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
+            <HBox layoutX="30.0" layoutY="118.0" prefHeight="30.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_password_64.png" />
+                     </image></ImageView>
+                  <PasswordField fx:id="PassWord" prefHeight="26.0" prefWidth="249.0" promptText="PassWord" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
          </children>
          <effect>
             <DropShadow />
