--- a/src/main/resources/com/example/demo/Register.fxml
+++ b/src/main/resources/com/example/demo/Register.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -26,19 +27,55 @@
             <Image url="@../image/images1.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="494.0" layoutY="82.0" opacity="0.77" prefHeight="326.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
+      <Pane layoutX="494.0" layoutY="82.0" prefHeight="350.0" prefWidth="326.0" style="-fx-background-radius: 20px; -fx-background-color: #ffffff70;">
          <children>
             <Label layoutX="106.0" layoutY="9.0" text="Sign Up" textFill="WHITE">
                <font>
                   <Font size="32.0" />
                </font>
             </Label>
-            <TextField fx:id="UserRegister" layoutX="5.0" layoutY="65.0" prefHeight="26.0" prefWidth="314.0" promptText="Username" />
-            <PasswordField fx:id="PassRegister" layoutX="5.0" layoutY="105.0" prefHeight="26.0" prefWidth="314.0" promptText="Password" />
-            <PasswordField fx:id="PassRegisterAgain" layoutX="5.0" layoutY="145.0" prefHeight="26.0" prefWidth="314.0" promptText="Password confirm" />
-            <TextField fx:id="SecretQuestion" layoutX="5.0" layoutY="185.0" prefHeight="26.0" prefWidth="314.0" promptText="Secret question" />
-            <Button fx:id="RegisterMore" layoutX="47.0" layoutY="227.0" mnemonicParsing="false" onAction="#ActionRegisterMore" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign up" textFill="WHITE" />
-            <Button fx:id="BackLogin" layoutX="47.0" layoutY="268.0" mnemonicParsing="false" onAction="#ActionBackLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
+            <Button fx:id="RegisterMore" layoutX="46.0" layoutY="265.0" mnemonicParsing="false" onAction="#ActionRegisterMore" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign up" textFill="WHITE" />
+            <Button fx:id="BackLogin" layoutX="47.0" layoutY="302.0" mnemonicParsing="false" onAction="#ActionBackLogin" prefHeight="26.0" prefWidth="232.0" style="-fx-background-color: #FF9966;" text="Sign in" textFill="WHITE" />
+            <HBox layoutX="30.0" layoutY="72.0" prefHeight="30.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_test_account_64.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="UserRegister" prefHeight="30.0" prefWidth="266.0" promptText="Username" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
+            <HBox layoutX="30.0" layoutY="121.0" prefHeight="30.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_password_64.png" />
+                     </image>
+                  </ImageView>
+                  <PasswordField fx:id="PassRegister" prefHeight="26.0" prefWidth="314.0" promptText="Password" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
+            <HBox layoutX="29.0" layoutY="168.0" prefHeight="30.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_password_64.png" />
+                     </image>
+                  </ImageView>
+                  <PasswordField fx:id="PassRegisterAgain" prefHeight="26.0" prefWidth="314.0" promptText="Password confirm" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
+            <HBox layoutX="30.0" layoutY="221.0" prefHeight="30.0" prefWidth="266.0" style="-fx-border-color: white; -fx-border-width: 0 0 2 0;">
+               <children>
+                  <ImageView fitHeight="27.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../hinh/icons8_questions_64.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="SecretQuestion" prefHeight="26.0" prefWidth="314.0" promptText="Secret question" style="-fx-background-color: transparent;" />
+               </children>
+            </HBox>
          </children>
          <effect>
             <DropShadow />
